sort.basic.comb.AlgCombSort.scala.error
Compilation error:
AlgCombSort:20: error: illegal start of simple expression
    }
    ^AlgCombSort:21: error: 'while' expected but '}' found.
    }
    ^